@@ -2,6 +2,7 @@ package pl.thinkdata.b2bbase.company.service;
 
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
+import org.apache.logging.log4j.util.Strings;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.stereotype.Service;
@@ -12,11 +13,14 @@ import pl.thinkdata.b2bbase.common.util.MessageGenerator;
 import pl.thinkdata.b2bbase.common.util.TokenUtil;
 import pl.thinkdata.b2bbase.company.dto.SubscriptionCompanyDto;
 import pl.thinkdata.b2bbase.company.dto.SubscriptionOrderToCatalog;
+import pl.thinkdata.b2bbase.company.mapper.PackageOrderMapper;
 import pl.thinkdata.b2bbase.company.model.Company;
 import pl.thinkdata.b2bbase.company.model.SubscriptionOrder;
 import pl.thinkdata.b2bbase.company.model.enums.PaymentStatusEnum;
 import pl.thinkdata.b2bbase.company.repository.SubscriptionOrderRepository;
 import pl.thinkdata.b2bbase.company.validator.SubscriptionValidator;
+import pl.thinkdata.b2bbase.discountcode.model.DiscountCode;
+import pl.thinkdata.b2bbase.discountcode.repository.DiscountCodeRepository;
 import pl.thinkdata.b2bbase.preferences.service.PreferencesService;
 import pl.thinkdata.b2bbase.pricelist.model.PriceList;
 import pl.thinkdata.b2bbase.pricelist.service.PriceListService;
@@ -25,10 +29,9 @@ import pl.thinkdata.b2bbase.security.repository.UserRepository;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 import static pl.thinkdata.b2bbase.common.tool.LoginDictionary.TOKEN_HEADER;
-import static pl.thinkdata.b2bbase.company.mapper.PackageOrderMapper.mapToSubscriptionOrderToCatalog;
 import static pl.thinkdata.b2bbase.company.mapper.SubscriptionOrderMapper.map;
 
 @Service
@@ -51,22 +54,50 @@ public class SubscriptionOrderService {
     private final PreferencesService preferencesService;
     private final MessageGenerator messageGenerator;
     SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
+    private final DiscountCodeRepository discountCodeRepository;
 
     public List<SubscriptionOrderToCatalog> getCompanySubscription(HttpServletRequest request) {
         Company company = companyService.getCompany(request);
         return subscriptionOrderRepository.findAllByCompanyId(company.getId()).stream()
-                .map(order -> mapToSubscriptionOrderToCatalog(order))
-                .collect(Collectors.toList());
+                .map(PackageOrderMapper::mapToSubscriptionOrderToCatalog)
+                .toList();
     }
 
     public SubscriptionOrder createSubscriptionForCompany(SubscriptionCompanyDto dto, HttpServletRequest request) {
         subscriptionValidator.valid(map(dto, request));
         deleteNotActiveSubscription(dto);
+
+        Optional<DiscountCode> discountCode = getDiscountCodeIfExist(dto.getDiscountCode());
+
         PriceList priceList = priceListService.getPrice(SUBSCRIPTION + dto.getSubscriptionType());
         SubscriptionOrder subscription = subscriptionOrderRepository.save(
-                map(dto, priceList));
+                map(dto, priceList, discountCode));
+        discountCode.ifPresent(this::usedCode);
         sendConformEmail(request, subscription, priceList);
         return subscription;
+    }
+
+    public List<SubscriptionOrder> findActiveSubscription(Long companyId, Date startDate, Date endDate) {
+        return subscriptionOrderRepository.findAllByCompanyId(companyId).stream()
+                .filter(subscription -> subscription.getStartDate().before(startDate) && subscription.getEndDate().after(endDate))
+                .filter(paymentStatus -> paymentStatus.getPaymentStatus() == (PaymentStatusEnum.PAID))
+                .toList();
+    }
+
+    private Optional<DiscountCode> getDiscountCodeIfExist(String code) {
+        if (Strings.isNotEmpty(code)) {
+            return discountCodeRepository.findByCode(code)
+                    .filter(limit -> limit.getUsage_limit() > 0)
+                    .filter(notExpired -> notExpired.isNotExpired(new Date()))
+                    .filter(DiscountCode::isActive);
+        }
+        return Optional.empty();
+    }
+
+    private void usedCode(DiscountCode discountCode) {
+        int usageLimit = discountCode.getUsage_limit();
+        discountCode.setUsage_limit(usageLimit - 1);
+        discountCodeRepository.save(discountCode);
     }
 
     private void sendConformEmail(HttpServletRequest request, SubscriptionOrder subscription, PriceList priceList) {
@@ -84,7 +115,7 @@ public class SubscriptionOrderService {
     }
 
     private String createDate(String userName, Company company, SubscriptionOrder subscription, PriceList price, String bankAccount) {
-        String date = "User email: " + userName + " | " +
+        return "User email: " + userName + " | " +
         "CompanyName: " + company.getName() + " | " +
         "CompanyType: " + company.getType() + " | " +
         "Nip: " + company.getNip() + " | " +
@@ -98,7 +129,6 @@ public class SubscriptionOrderService {
         "EndData: " + dateFormat.format(subscription.getEndDate()) + " | " +
         "Price: " + price.getPrice() + " | " +
         "Bank Account: " + bankAccount;
-        return date;
     }
 
     private Context getContext(Company company, SubscriptionOrder subscription, PriceList price, String bankAccount) {
@@ -125,12 +155,5 @@ public class SubscriptionOrderService {
                 .map(SubscriptionOrder::getId)
                 .toList();
         subscriptionOrderRepository.deleteAllById(subscriptionToDelete);
-    }
-
-    public List<SubscriptionOrder> findActiveSubscription(Long companyId, Date startDate, Date endDate) {
-        return subscriptionOrderRepository.findAllByCompanyId(companyId).stream()
-                .filter(subscription -> subscription.getStartDate().before(startDate) && subscription.getEndDate().after(endDate))
-                .filter(paymentStatus -> paymentStatus.getPaymentStatus() == (PaymentStatusEnum.PAID))
-                .toList();
     }
 }
